--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -4,6 +4,40 @@
   padding: 2rem;
   text-align: center;
 }
+/* Prevent zoom on double tap for iOS */
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Allow text selection in input fields */
+input, textarea {
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
+/* Better touch handling */
+button, [role="button"] {
+  touch-action: manipulation;
+}
+
+/* Prevent double tap zoom */
+@media (max-width: 768px) {
+  html {
+    touch-action: manipulation;
+  }
+  
+  button {
+    touch-action: manipulation;
+  }
+}
 
 .logo {
   height: 6em;
